--- a/DataPreperation/prepare_parquet.ipynb
+++ b/DataPreperation/prepare_parquet.ipynb
@@ -7,13 +7,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-03 14:08:16 - <module> - `km3net` not available. Some functionality may be missing.\u001b[0m\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -25,23 +18,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-03 14:12:31 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 15:49:48 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 15:49:49 - <module> - `km3net` not available. Some functionality may be missing.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "import sys, os\n",
-    "import glob\n",
+    "import sys, os, glob, re\n",
     "\n",
     "repo_root = os.path.abspath(\"..\")\n",
     "sys.path.append(repo_root)\n",
     "\n",
-    "from MyClasses import PONE_Reader, I3FeatureExtractorPONE, I3TruthExtractorPONE"
+    "from MyClasses.reader import PONE_Reader\n",
+    "from MyClasses.feature_extractor import I3FeatureExtractorPONE\n",
+    "from MyClasses.truth_extractor import I3TruthExtractorPONE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "b1a11923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_GLOB = \"/project/def-nahee/kbas/POM_Response_GZ/*.i3.gz\"\n",
+    "OUTDIR     = \"/project/def-nahee/kbas/POM_Response_Parquet\"\n",
+    "GCD_RESCUE = \"/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "16ba25f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batch_id_from_i3(path):\n",
+    "    m = re.search(r\"batch_(\\d+)\\.i3\\.gz$\", os.path.basename(path))\n",
+    "    return int(m.group(1)) if m else None\n",
+    "\n",
+    "def batch_ids_in_outdir(outdir):\n",
+    "    # outdir içinde \"batch_1234\" geçen her şeyi tara\n",
+    "    candidates = glob.glob(os.path.join(outdir, \"**\", \"*\"), recursive=True)\n",
+    "    ids = set()\n",
+    "    for p in candidates:\n",
+    "        m = re.search(r\"batch_(\\d+)\", os.path.basename(p))\n",
+    "        if m:\n",
+    "            ids.add(int(m.group(1)))\n",
+    "    return ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f9e612d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_files = sorted(glob.glob(INPUT_GLOB))\n",
+    "done_ids  = batch_ids_in_outdir(OUTDIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67eec2f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "todo = []\n",
+    "for f in all_files:\n",
+    "    bid = batch_id_from_i3(f)\n",
+    "    if bid is None:\n",
+    "        continue\n",
+    "    if bid not in done_ids:\n",
+    "        todo.append(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c1f1f854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "todo = todo[3:] # '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1052.i3.gz' is problematic\n",
+    "# '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1060.i3.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "67f2ed72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total i3: 4996\n",
+      "Done batches: 91\n",
+      "Todo i3: 4902\n",
+      "First 5 todo: ['/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1086.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1087.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1088.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1089.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_109.i3.gz']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total i3:\", len(all_files))\n",
+    "print(\"Done batches:\", len(done_ids))\n",
+    "print(\"Todo i3:\", len(todo))\n",
+    "print(\"First 5 todo:\", todo[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e8ee2a3d",
    "metadata": {},
    "outputs": [],
@@ -51,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "b1656c29",
    "metadata": {},
    "outputs": [],
@@ -63,72 +154,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "95bd6626",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# INPUT_DIR = \"/project/def-nahee/kbas/POM_Response\"\n",
-    "GCD_RESCUE = \"/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz\"\n",
-    "OUTDIR = \"/project/def-nahee/kbas/POM_Response_Parquet\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "217e3e80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INPUT_GLOB = \"/project/def-nahee/kbas/POM_Response_GZ/*.i3.gz\"\n",
-    "N_FILES = 20  # deneme için 1-2 yap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "2e386714",
+   "execution_count": 10,
+   "id": "9442a9c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting these files:\n",
-      " /project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_100.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1000.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1001.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1002.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1003.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1004.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1005.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1006.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1007.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1008.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1009.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_101.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1010.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1011.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1012.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1013.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1014.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1015.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1016.i3.gz\n",
-      "/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1017.i3.gz\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-11 15:49:49 - NullSplitI3Filter.__init__ - Writing log to \u001b[1mlogs/graphnet_20260111-154949.log\u001b[0m\n"
      ]
     }
    ],
-   "source": [
-    "files = sorted(glob.glob(INPUT_GLOB))[:N_FILES]\n",
-    "print(\"Converting these files:\\n\", \"\\n\".join(files))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "9442a9c7",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "reader = PONE_Reader(\n",
     "    gcd_rescue=GCD_RESCUE,\n",
@@ -138,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "b6e9ae33",
    "metadata": {},
    "outputs": [],
@@ -151,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "013c12a5",
    "metadata": {},
    "outputs": [],
@@ -170,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "0cf8b65c",
    "metadata": {},
    "outputs": [],
@@ -180,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "38d0bda4",
    "metadata": {},
    "outputs": [],
@@ -190,14 +227,14 @@
     "    save_method=writer,  \n",
     "    extractors=extractors,\n",
     "    outdir=OUTDIR,\n",
-    "    num_workers=1,\n",
+    "    num_workers=1,  #4?\n",
     "    index_column=\"event_no\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "541e3f8d",
    "metadata": {},
    "outputs": [
@@ -206,42 +243,108 @@
      "output_type": "stream",
      "text": [
       "Assuming list of files.\n",
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-03 14:13:06 - DataConverter.__call__ - Processing 20 file(s) in main thread(not multiprocessing)\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-11 15:49:49 - DataConverter.__call__ - Processing 4902 file(s) in main thread(not multiprocessing)\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|\u001b[32m█████████████████████████████████████\u001b[0m| 20/20 [03:13<00:00,  9.68s/ file(s)]\u001b[0m\n"
+      "  1%|\u001b[32m▎                               \u001b[0m| 57/4902 [08:16<12:02:18,  8.94s/ file(s)]\u001b[0m"
      ]
     }
    ],
    "source": [
-    "converter(input_dir=files)"
+    "converter(input_dir=todo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "e980e872",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa73b94e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b50d1623",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3102ed72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e018822d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d18c58f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06dd101d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b81c6cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2546f55f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DONE: /project/def-nahee/kbas/POM_Response_Parquet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"DONE:\", OUTDIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "c2013dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged oncesi yeni columnlari ekle. angle ve loc of pmt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f991b78e",
    "metadata": {},
    "outputs": [],
@@ -251,25 +354,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "bcf00c1f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-03 14:16:40 - ParquetWriter.run_code - Processing 1 batches in main thread.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|\u001b[32m███████████████████████████████████████\u001b[0m| 1/1 [00:01<00:00,  1.60s/shard(s)]\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "writer.merge_files(\n",
     "    files=[],                \n",
@@ -290,9 +378,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "graphnet_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "graphnet_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
