--- a/Playground/SingleI3Batch/POMResponse.ipynb
+++ b/Playground/SingleI3Batch/POMResponse.ipynb
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a841cda8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"/project/def-nahee/kbas/POM_Response/pom_response_batch_000.i3.gz\"\n",
+    "DATA_PATH = '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1051.i3.gz'\n",
     "GCD_PATH = \"/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz\""
    ]
   },
@@ -68,30 +68,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2b6912d5",
+   "execution_count": 7,
+   "id": "6f157743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a881b120",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ I3Frame  (Physics):\n",
-      "  'EventProperties' [DAQ] ==> LeptonInjector::BasicEventProperties (140)\n",
-      "  'EventPulseSeries' [DAQ] ==> I3Map<OMKey, vector<I3RecoPulse> > (167406)\n",
-      "  'I3EventHeader' [DAQ] ==> I3EventHeader (99)\n",
-      "  'I3MCTree' [DAQ] ==> TreeBase::Tree<I3Particle, I3ParticleID, i3hash<I3ParticleID> > (422)\n",
-      "  'I3MCTree_RNGState' [DAQ] ==> I3GSLRandomServiceState (87)\n",
-      "  'I3MCTree_postprop' [DAQ] ==> TreeBase::Tree<I3Particle, I3ParticleID, i3hash<I3ParticleID> > (2778)\n",
-      "  'MMCTrackList' [DAQ] ==> I3Vector<I3MMCTrack> (304)\n",
-      "  'Noise_Dark' [DAQ] ==> I3Map<OMKey, vector<I3RecoPulse> > (52540)\n",
-      "  'Noise_K40' [DAQ] ==> I3Map<OMKey, vector<I3RecoPulse> > (165492)\n",
-      "  'PMT_Response' [DAQ] ==> I3Map<OMKey, vector<I3RecoPulse> > (222554)\n",
-      "  'PMT_Response_nonoise' [DAQ] ==> I3Map<OMKey, vector<I3RecoPulse> > (1337)\n",
-      "  'TriggerTime_3PMT_1DOM' [DAQ] ==> I3PODHolder<double> (36)\n",
-      "]\n",
-      "\n",
-      "<class 'icecube._icetray.I3Frame'>\n"
+      "<icecube._dataio.I3File object at 0x146c992b6a20>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2b6912d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "input stream error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data_file \u001b[38;5;241m=\u001b[39m dataio\u001b[38;5;241m.\u001b[39mI3File(DATA_PATH)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdata_file\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m frame \u001b[38;5;241m=\u001b[39m data_file\u001b[38;5;241m.\u001b[39mpop_frame()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(frame)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: input stream error"
      ]
     }
    ],
