--- a/DataPreperation/checks/investigate_parquet.ipynb
+++ b/DataPreperation/checks/investigate_parquet.ipynb
@@ -536,258 +536,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "06a2d3fe",
-   "metadata": {},
-   "source": [
-    "### Check the \"Merged\" Folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "f6b5551d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "\n",
-    "# =========================\n",
-    "# CONFIG\n",
-    "# =========================\n",
-    "MERGED_DIR = BASE_DIR  \n",
-    "MERGED_DIR = Path(\"/project/def-nahee/kbas/POM_Response_Parquet/merged\")  # örnek\n",
-    "TRUTH_TABLE = \"truth\"\n",
-    "\n",
-    "# features tablonun adı sende \"features\" idi; değilse aşağıyı değiştir\n",
-    "FEATURE_TABLE = \"features\"\n",
-    "\n",
-    "# kaç batch dosyası inceleyelim?\n",
-    "N_FILES = 3\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "33066f22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# =========================\n",
-    "# HELPERS\n",
-    "# =========================\n",
-    "def list_tables(root: Path):\n",
-    "    tables = sorted([p.name for p in root.iterdir() if p.is_dir()])\n",
-    "    print(\"Tables in merged:\", tables)\n",
-    "    return tables\n",
-    "\n",
-    "def list_parquets(table_dir: Path):\n",
-    "    files = sorted(table_dir.glob(\"*.parquet\"))\n",
-    "    return files\n",
-    "\n",
-    "def get_batch_id(fname: str):\n",
-    "    # truth_12.parquet / features_12.parquet gibi isimlerden 12’yi çekmeye çalışır\n",
-    "    m = re.search(r\"_(\\d+)\\.parquet$\", fname)\n",
-    "    return int(m.group(1)) if m else None\n",
-    "\n",
-    "def quick_df_info(df: pd.DataFrame, name: str):\n",
-    "    print(f\"\\n--- {name} ---\")\n",
-    "    print(\"rows:\", len(df), \"cols:\", df.shape[1])\n",
-    "    print(\"columns:\", list(df.columns))\n",
-    "    if \"event_no\" in df.columns:\n",
-    "        print(\"event_no unique:\", df[\"event_no\"].nunique())\n",
-    "        # truth için genelde 1 row/event bekleriz\n",
-    "        vc = df[\"event_no\"].value_counts()\n",
-    "        print(\"event_no value_counts head:\")\n",
-    "        print(vc.head(5))\n",
-    "    else:\n",
-    "        print(\"NO event_no column in columns (maybe it's index?)\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "3d9db506",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tables in merged: ['features', 'truth']\n",
-      "\n",
-      "Truth parquet count: 1\n",
-      "Feature parquet count: 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# =========================\n",
-    "# MAIN\n",
-    "# =========================\n",
-    "assert MERGED_DIR.exists(), f\"MERGED_DIR not found: {MERGED_DIR}\"\n",
-    "\n",
-    "tables = list_tables(MERGED_DIR)\n",
-    "\n",
-    "truth_dir = MERGED_DIR / TRUTH_TABLE\n",
-    "feat_dir  = MERGED_DIR / FEATURE_TABLE\n",
-    "\n",
-    "assert truth_dir.exists(), f\"truth dir not found: {truth_dir}\"\n",
-    "assert feat_dir.exists(), f\"feature dir not found: {feat_dir}\"\n",
-    "\n",
-    "truth_files = list_parquets(truth_dir)\n",
-    "feat_files  = list_parquets(feat_dir)\n",
-    "\n",
-    "print(\"\\nTruth parquet count:\", len(truth_files))\n",
-    "print(\"Feature parquet count:\", len(feat_files))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "f558a1cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Batch IDs (truth)  : [0] ...\n",
-      "Batch IDs (feature): [0] ...\n",
-      "IDs in both: 1\n",
-      "Only truth: []\n",
-      "Only feat : []\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# batch id setleri\n",
-    "truth_ids = {get_batch_id(f.name) for f in truth_files}\n",
-    "feat_ids  = {get_batch_id(f.name) for f in feat_files}\n",
-    "truth_ids.discard(None); feat_ids.discard(None)\n",
-    "\n",
-    "print(\"\\nBatch IDs (truth)  :\", sorted(list(truth_ids))[:20], \"...\")\n",
-    "print(\"Batch IDs (feature):\", sorted(list(feat_ids))[:20], \"...\")\n",
-    "print(\"IDs in both:\", len(truth_ids & feat_ids))\n",
-    "print(\"Only truth:\", sorted(list(truth_ids - feat_ids))[:20])\n",
-    "print(\"Only feat :\", sorted(list(feat_ids - truth_ids))[:20])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "6902c7d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Inspecting batch ids: [0]\n",
-      "\n",
-      "--- TRUTH batch 0 (truth_0.parquet) ---\n",
-      "rows: 746 cols: 15\n",
-      "columns: ['energy', 'position_x', 'position_y', 'position_z', 'azimuth', 'zenith', 'pid', 'event_time', 'sim_type', 'interaction_type', 'elasticity', 'RunID', 'SubrunID', 'EventID', 'SubEventID']\n",
-      "NO event_no column in columns (maybe it's index?)\n",
-      "\n",
-      "--- FEATURE batch 0 (features_0.parquet) ---\n",
-      "rows: 3372308 cols: 5\n",
-      "columns: ['charge', 'dom_time', 'dom_x', 'dom_y', 'dom_z']\n",
-      "NO event_no column in columns (maybe it's index?)\n",
-      "\n",
-      "TRUTH head:\n",
-      "                energy   position_x  position_y  position_z   azimuth  \\\n",
-      "event_no                                                                \n",
-      "696         639.466672 -1046.671099 -178.810131  775.750951  3.668017   \n",
-      "651         345.979393  -134.821341 -156.781099  511.837625  0.036637   \n",
-      "672       25579.431266   -12.274139 -366.356952  476.605146  3.963338   \n",
-      "695         376.114768   298.849338  526.693845 -363.415712  5.155793   \n",
-      "653         292.086474   226.158901  631.034313  305.997852  5.312811   \n",
-      "\n",
-      "            zenith  pid  event_time        sim_type  interaction_type  \\\n",
-      "event_no                                                                \n",
-      "696       0.460260  -14           0  LeptonInjector                 1   \n",
-      "651       1.365456   14           0  LeptonInjector                 1   \n",
-      "672       1.014043   14           0  LeptonInjector                 1   \n",
-      "695       1.609414  -14           0  LeptonInjector                 1   \n",
-      "653       2.784032   14           0  LeptonInjector                 1   \n",
-      "\n",
-      "          elasticity  RunID    SubrunID  EventID  SubEventID  \n",
-      "event_no                                                      \n",
-      "696         0.659847   1016  4294967295      187           0  \n",
-      "651         0.484912   1016  4294967295        7           0  \n",
-      "672         0.570786   1016  4294967295       81           0  \n",
-      "695         0.148769   1016  4294967295      186           0  \n",
-      "653         0.153314   1016  4294967295       16           0  \n",
-      "\n",
-      "FEATURE head:\n",
-      "            charge     dom_time  dom_x       dom_y  dom_z\n",
-      "event_no                                                 \n",
-      "696       1.432395  1864.761098 -120.0 -730.717968 -300.0\n",
-      "696       1.257238  3782.905879 -120.0 -730.717968 -150.0\n",
-      "696       1.147190  9111.458881 -120.0 -730.717968 -150.0\n",
-      "696       0.946087  1736.127698 -120.0 -730.717968  200.0\n",
-      "696       0.666936  4235.702576 -120.0 -730.717968  250.0\n",
-      "\n",
-      "================================================================================\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# ortak batch’lerden ilk N tanesini inceleyelim\n",
-    "common_ids = sorted(list(truth_ids & feat_ids))\n",
-    "if not common_ids:\n",
-    "    raise RuntimeError(\"No common batch ids between truth and feature!\")\n",
-    "\n",
-    "inspect_ids = common_ids[:N_FILES]\n",
-    "print(\"\\nInspecting batch ids:\", inspect_ids)\n",
-    "\n",
-    "for bid in inspect_ids:\n",
-    "    tpath = truth_dir / f\"{TRUTH_TABLE}_{bid}.parquet\"\n",
-    "    fpath = feat_dir  / f\"{FEATURE_TABLE}_{bid}.parquet\"\n",
-    "\n",
-    "    tdf = pd.read_parquet(tpath)\n",
-    "    fdf = pd.read_parquet(fpath)\n",
-    "\n",
-    "    quick_df_info(tdf, f\"TRUTH batch {bid} ({tpath.name})\")\n",
-    "    quick_df_info(fdf, f\"FEATURE batch {bid} ({fpath.name})\")\n",
-    "\n",
-    "    # ---- Sanity checks ----\n",
-    "    # 1) truth: idealde 1 row/event_no\n",
-    "    if \"event_no\" in tdf.columns:\n",
-    "        truth_bad = (tdf[\"event_no\"].value_counts() != 1)\n",
-    "        n_bad = truth_bad.sum()\n",
-    "        print(\"truth rows != 1 per event:\", int(n_bad))\n",
-    "        if n_bad > 0:\n",
-    "            bad_ids = truth_bad[truth_bad].index[:10].tolist()\n",
-    "            print(\"example bad truth event_no:\", bad_ids)\n",
-    "\n",
-    "    # 2) feature eventleri truth eventlerinin alt kümesi mi?\n",
-    "    if \"event_no\" in tdf.columns and \"event_no\" in fdf.columns:\n",
-    "        tset = set(tdf[\"event_no\"].unique())\n",
-    "        fset = set(fdf[\"event_no\"].unique())\n",
-    "        missing_in_truth = sorted(list(fset - tset))[:10]\n",
-    "        missing_in_feat  = sorted(list(tset - fset))[:10]\n",
-    "        print(\"feature events not in truth (sample):\", missing_in_truth)\n",
-    "        print(\"truth events not in feature (sample):\", missing_in_feat)\n",
-    "\n",
-    "    # 3) hızlı göz at: ilk 5 satır\n",
-    "    print(\"\\nTRUTH head:\")\n",
-    "    print(tdf.head(5))\n",
-    "    print(\"\\nFEATURE head:\")\n",
-    "    print(fdf.head(5))\n",
-    "    print(\"\\n\" + \"=\"*80)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "39354952",
@@ -798,7 +546,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "graphnet_env",
+   "display_name": "Python (graphnet_env)",
    "language": "python",
    "name": "graphnet_env"
   },
@@ -812,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
