--- a/DataPreperation/prepare_parquet.ipynb
+++ b/DataPreperation/prepare_parquet.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "21cd7c05",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kbas/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 15:49:48 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 15:49:49 - <module> - `km3net` not available. Some functionality may be missing.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os, glob, re\n",
     "\n",
@@ -36,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b1a11923",
+   "execution_count": null,
+   "id": "3c2ac20d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "16ba25f8",
+   "execution_count": null,
+   "id": "c5f8db12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f9e612d0",
+   "execution_count": null,
+   "id": "91c80a50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "67eec2f1",
+   "execution_count": null,
+   "id": "3b4fdb52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,32 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c1f1f854",
+   "execution_count": null,
+   "id": "17cdf455",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "todo = todo[3:] # '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1052.i3.gz' is problematic\n",
-    "# '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1060.i3.gz'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "67f2ed72",
+   "execution_count": null,
+   "id": "1d13d60c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total i3: 4996\n",
-      "Done batches: 91\n",
-      "Todo i3: 4902\n",
-      "First 5 todo: ['/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1086.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1087.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1088.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_1089.i3.gz', '/project/def-nahee/kbas/POM_Response_GZ/pom_response_batch_109.i3.gz']\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8c1b0d7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(\"Total i3:\", len(all_files))\n",
     "print(\"Done batches:\", len(done_ids))\n",
@@ -132,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e8ee2a3d",
    "metadata": {},
    "outputs": [],
@@ -142,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b1656c29",
    "metadata": {},
    "outputs": [],
@@ -154,18 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9442a9c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-11 15:49:49 - NullSplitI3Filter.__init__ - Writing log to \u001b[1mlogs/graphnet_20260111-154949.log\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reader = PONE_Reader(\n",
     "    gcd_rescue=GCD_RESCUE,\n",
@@ -175,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b6e9ae33",
    "metadata": {},
    "outputs": [],
@@ -188,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "013c12a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "extractors = [\n",
-    "    I3FeatureExtractorPONE(pulsemap=\"EventPulseSeries\", name=\"features\", exclude=['pmt_area', 'rde', 'width', 'event_time', 'is_bright_dom', 'is_saturated_dom', 'is_errata_dom', 'is_bad_dom', 'hlc','awtd','string', 'pmt_number', 'dom_number', 'dom_type']),\n",
+    "    I3FeatureExtractorPONE(pulsemap=\"EventPulseSeries\", name=\"features\", exclude=['pmt_area', 'rde', 'width', 'event_time', 'is_bright_dom', 'is_saturated_dom', 'is_errata_dom', 'is_bad_dom', 'hlc','awtd', 'dom_type']),\n",
     "    I3TruthExtractorPONE(mctree=\"I3MCTree_postprop\", name=\"truth\", exclude=['L7_oscNext_bool', 'L6_oscNext_bool',\n",
     "                                                               'L5_oscNext_bool', 'L4_oscNext_bool',\n",
     "                                                               'L3_oscNext_bool',\n",
@@ -202,12 +171,15 @@
     "                                                               'CascadeFilter_13','DeepCoreFilter_13', \n",
     "                                                                'dbang_decay_length', 'track_length', 'stopped_muon', 'energy_track', 'energy_cascade', 'inelasticity', 'is_starting'] ),\n",
     "\n",
-    "]\n"
+    "]\n",
+    "\n",
+    "\n",
+    "# incude pmt locs and truth per  pulse being noise or not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0cf8b65c",
    "metadata": {},
    "outputs": [],
@@ -217,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "38d0bda4",
    "metadata": {},
    "outputs": [],
@@ -235,33 +207,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "541e3f8d",
+   "id": "a36c61d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Assuming list of files.\n",
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-11 15:49:49 - DataConverter.__call__ - Processing 4902 file(s) in main thread(not multiprocessing)\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|\u001b[32m▎                               \u001b[0m| 57/4902 [08:16<12:02:18,  8.94s/ file(s)]\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "converter(input_dir=todo)"
+    "import traceback\n",
+    "\n",
+    "for b in todo:  # örn: batch klasörleri / dosyaları listesi\n",
+    "    try:\n",
+    "        converter(input_dir=b)\n",
+    "    except Exception as e:\n",
+    "        print(f\"[SKIP] Batch failed: {b}\\n  -> {e}\")\n",
+    "        # print(traceback.format_exc())  \n",
+    "        continue\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e980e872",
+   "id": "541e3f8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converter(input_dir=todo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17fab36a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01cf2ba9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa73b94e",
+   "id": "eb7075fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -277,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b50d1623",
+   "id": "878e5f49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -285,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3102ed72",
+   "id": "585ddbc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -293,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e018822d",
+   "id": "347f0b78",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -301,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18c58f4",
+   "id": "5fb0bb66",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -309,15 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06dd101d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b81c6cf",
+   "id": "b8d28c6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -335,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2013dba",
+   "id": "b3fbdc76",
    "metadata": {},
    "outputs": [],
    "source": [
