--- a/Playground/MyClasses/feature_extractor.ipynb
+++ b/Playground/MyClasses/feature_extractor.ipynb
@@ -753,8 +753,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "acb9dc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## burdaki pmt_area senin pom_response olusturma mantigina uyuyor mu? genel pom response'una bakarken\n",
+    "## senin elindeki data ile uyumlu mu diye de bak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ada93b5a",
    "metadata": {},
    "outputs": [],
    "source": []
