pom response understanding

--- a/DataPreperation/trial_pom_response investigation.ipynb
+++ b/DataPreperation/trial_pom_response investigation.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2407cce9",
    "metadata": {},
    "outputs": [],
@@ -69,9 +69,11 @@
     "####\n",
     "PMT_Response_nonoise_physics = frame_physics[\"PMT_Response_nonoise\"]\n",
     "PMT_Response_nonoise_daq = frame_daq[\"PMT_Response_nonoise\"]\n",
+    "# PMT seviyesinde ve sadece gercek pulse\n",
     "####\n",
     "PMT_Response_physics = frame_physics[\"PMT_Response\"]\n",
     "PMT_Response_daq = frame_daq[\"PMT_Response\"]\n",
+    "# PMT seviyesinde ve noise + signal\n",
     "####\n",
     "EventPulseSeries_physics = frame_physics[\"EventPulseSeries\"]\n",
     "EventPulseSeries_daq = frame_daq[\"EventPulseSeries\"]\n",
@@ -1190,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "467c06b9",
    "metadata": {},
    "outputs": [
@@ -1205,12 +1207,15 @@
    ],
    "source": [
     "print(frame_daq['TriggerTime_3PMT_2DOM'])\n",
-    "print(frame_physics['TriggerTime_3PMT_2DOM'])"
+    "print(frame_physics['TriggerTime_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir.\n",
+    "\n",
+    "# event trigger time, bu üç listedeki tüm zamanların en küçüğü (en erkeni):mintrigtime=min⁡(detectorTriggerTime∪stringTriggerTime∪singleOMTriggerTime)\\text{mintrigtime} = \\min(\\text{detectorTriggerTime} \\cup \\text{stringTriggerTime} \\cup \\text{singleOMTriggerTime})mintrigtime=min(detectorTriggerTime∪stringTriggerTime∪singleOMTriggerTime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "3431c476",
    "metadata": {},
    "outputs": [
@@ -1226,12 +1231,18 @@
     }
    ],
    "source": [
-    "print(frame_daq['DOMTrigger_HitTimes'])"
+    "print(frame_daq['DOMTrigger_HitTimes'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)\n",
+    "\n",
+    "#  event trigger time (mintrigtime) PulseSeriesIn\n",
+    "# Trigger time’ı bulmak için kullandığı şeyler: `DOMTrigger_Time` + `DOMTrigger_NCoin` (ve geometri + pencere/eşik parametreleri). Bunlardan **detectorTriggerTime / stringTriggerTime / singleOMTriggerTime** listelerini üretiyor, sonra da bunların içinden **en erkenini** `mintrigtime` yapıyor.\n",
+    "\n",
+    "# PulseSeriesIn ne için?: Trigger time bulundu **ktan sonra** sadece pulse’ları bir zaman penceresinde **kırpmak** ve zamanı `mintrigtime`’a göre **yeniden kaydırıp** `PulseSeriesOut` üretmek için kullanılıyor. Trigger time hesabına girmiyor.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "4ef16a21",
    "metadata": {},
    "outputs": [
@@ -1247,12 +1258,13 @@
     }
    ],
    "source": [
-    "print(frame_physics['DOMTrigger_HitTimes'])"
+    "print(frame_physics['DOMTrigger_HitTimes'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b16f56e7",
    "metadata": {},
    "outputs": [
@@ -1268,12 +1280,13 @@
     }
    ],
    "source": [
-    "print(frame_daq['DOMTrigger_NCoin'])"
+    "print(frame_daq['DOMTrigger_NCoin'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "6253e0be",
    "metadata": {},
    "outputs": [
@@ -1289,12 +1302,13 @@
     }
    ],
    "source": [
-    "print(frame_physics['DOMTrigger_NCoin'])"
+    "print(frame_physics['DOMTrigger_NCoin'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "d13ab7be",
    "metadata": {},
    "outputs": [
@@ -1310,12 +1324,13 @@
     }
    ],
    "source": [
-    "print(frame_daq['DOMTrigger_Time'])"
+    "print(frame_daq['DOMTrigger_Time'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "86dd2fb3",
    "metadata": {},
    "outputs": [
@@ -1331,12 +1346,13 @@
     }
    ],
    "source": [
-    "print(frame_physics['DOMTrigger_Time'])"
+    "print(frame_physics['DOMTrigger_Time'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "8631a8bf",
    "metadata": {},
    "outputs": [
@@ -1352,12 +1368,13 @@
     }
    ],
    "source": [
-    "print(frame_daq['DOMTrigger_PMTs'])"
+    "print(frame_daq['DOMTrigger_PMTs'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "672f0eea",
    "metadata": {},
    "outputs": [
@@ -1373,12 +1390,13 @@
     }
    ],
    "source": [
-    "print(frame_physics['DOMTrigger_PMTs'])"
+    "print(frame_physics['DOMTrigger_PMTs'])\n",
+    "## DOM Trigger tarafinda (Detector trigger degil uretilir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "77067b8c",
    "metadata": {},
    "outputs": [
@@ -1391,12 +1409,20 @@
     }
    ],
    "source": [
-    "print(frame_daq['StringTriggers_3PMT_2DOM'])"
+    "print(frame_daq['StringTriggers_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir.\n",
+    "\n",
+    "# **String grubu**, geometriye göre oluşturulan bir *OM kümesi*: genelde **komşu string(ler)** üzerinde, belirli bir **OM katmanı aralığında (`StringNRows`)** yer alan OMLer bir grup yapılıyor ( `ForceAdjacency=True` ise sadece yeterince yakın stringler dahil ediliyor). String trigger, coincidence adaylarını bu grupların içinde topluca sayıyor.\n",
+    "\n",
+    "\n",
+    "# nasil uretilir:\n",
+    "# Önce coincidence ≥ OMPMTCoinc olan OM-zaman çiftleri aday yapılıyor; sonra aynı “string grubu” içinde, \n",
+    "# StringCoincidenceWindow içinde farklı OM sayısı ≥ StringCoincidenceN olursa o grubun en geç zamanı stringTriggerTime’a yazılıyor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "3ebdade0",
    "metadata": {},
    "outputs": [
@@ -1409,12 +1435,16 @@
     }
    ],
    "source": [
-    "print(frame_physics['StringTriggers_3PMT_2DOM'])"
+    "print(frame_physics['StringTriggers_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir.\n",
+    "\n",
+    "# stringTrigger icinde sadece zaman var. format: [t1, t2, t3, ...]\n",
+    "# peki nasil uretiliyor (benim cumlelerimle): her bir OM icinde, >=2 PMT belli bir aralikta ise aday zamanlar cikariliyor. bu aday zamanlar, o OM'un ait oldugu gruplara dagitiliyor. boylece her grupta bissuru aday zamanlar oluyor.sonra, her grupta, belli bir zaman araliginda >2 tane OM'den gelen zaman varsa, bu gruptan trigger olur ve bu grupta temsilci bir zaman secilir. o zaman da stringTriggerTime listesine eklenir. cok yakin degerler varsa birlestirilir o degerler stringTriggerTime icinden.temsilci zaman da gruptaki max zaman olarak secilir."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "58322c8d",
    "metadata": {},
    "outputs": [
@@ -1427,12 +1457,17 @@
     }
    ],
    "source": [
-    "print(frame_daq['DetectorTriggers_3PMT_2DOM'])"
+    "print(frame_daq['DetectorTriggers_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir.\n",
+    "\n",
+    "## Yine coincidence ≥ OMPMTCoinc olan tüm OM-zaman adayları toplanıyor; FullDetectorCoincidenceWindow içinde \n",
+    "# farklı OM sayısı ≥ FullDetectorCoincidenceN olursa en geç zaman detectorTriggerTime’a yazılıyor \n",
+    "# (yakın trigger’lar EventLength içinde birleştiriliyor)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "b427b774",
    "metadata": {},
    "outputs": [
@@ -1445,12 +1480,16 @@
     }
    ],
    "source": [
-    "print(frame_physics['DetectorTriggers_3PMT_2DOM'])"
+    "print(frame_physics['DetectorTriggers_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir.\n",
+    "\n",
+    "# nasil uretiliyor (benim cumlelerimle)\n",
+    "# detectorTriggerTime:durr. simdi, soyle oluyor surec. bos bir liste var. bu listede her OM'da >=2 pmt eger hit aldiysa, bunu o listeye eklyior. boylece o listede om id ve zaman var. sonra o zamani merkez alip belli bir zaman arligina bakiyor. o zaman araliginda (bir pencere) eger >=3 om hit aldiysa, penceredeki max zamani aliyor. bunu detectorTriggerTime'a ekliyor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "27835f2f",
    "metadata": {},
    "outputs": [
@@ -1463,12 +1502,16 @@
     }
    ],
    "source": [
-    "print(frame_daq['singleOMTrigger_3PMT_2DOM'])"
+    "print(frame_daq['singleOMTrigger_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir.\n",
+    "\n",
+    "# nasil uretilir DOMTrigger_Time/NCoin içinden, tek bir OM içinde coincidence sayısı ≥ 3 olan zamanlar seçiliyor \n",
+    "# ve bu zamanlar singleOMTrigger listesine ekleniyor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b1a1b374",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1524,8 @@
     }
    ],
    "source": [
-    "print(frame_physics['singleOMTrigger_3PMT_2DOM'])"
+    "print(frame_physics['singleOMTrigger_3PMT_2DOM'])\n",
+    "## bu DetectorTrigger ile uretilir."
    ]
   },
   {
@@ -1502,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "8fa93209",
    "metadata": {},
    "outputs": [
@@ -36675,12 +36719,13 @@
     }
    ],
    "source": [
-    "print(frame_daq['triggerpulsemap'])"
+    "print(frame_daq['triggerpulsemap'])\n",
+    "# OM seviyesinde response, ve signal + noise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "30f071fc",
    "metadata": {},
    "outputs": [
@@ -71853,7 +71898,8 @@
     }
    ],
    "source": [
-    "print(frame_physics['triggerpulsemap'])"
+    "print(frame_physics['triggerpulsemap'])\n",
+    "# OM seviyesinde response, ve signal + noise"
    ]
   },
   {
