--- a/Playground/MyClasses/truth_extractor.ipynb
+++ b/Playground/MyClasses/truth_extractor.ipynb
@@ -862,7 +862,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "graphnet_env",
+   "display_name": "Python (graphnet_env)",
    "language": "python",
    "name": "graphnet_env"
   },
